@@ -5,7 +5,7 @@ Ltac ret_and_left T :=
   lazymatch eval hnf in t with
     | ?a /\ ?b => constr:(proj1 T)
     | forall x : ?T', @?f x =>
-      constr:(fun x : T' => $(let fx := constr:(T x) in
+      constr:(fun x : T' => ltac:(let fx := constr:(T x) in
                               let t := ret_and_left fx in
-                              exact t)$)
+                              exact t))
   end.
