@@ -1,7 +1,7 @@
 Goal True.
 Proof.
 match goal with
-  | _ => let x := constr:($(fail)$) in idtac
+  | _ => let x := constr:(ltac:(fail)) in idtac
   | _ => idtac
 end.
 Abort.
