@@ -1,5 +1,5 @@
 Require Import TestSuite.admit.
 Definition foo : Set.
 Proof.
-  refine ($(abstract admit)$).
+  refine (ltac:(abstract admit)).
 Qed.
